# OWStreamRecordEx

./: CMakeLists.txt  README.md
res/: default.json  owsrx.rc
src/: Config.cpp  Config.h  ConfigController.cpp  ConfigController.h  MDXGI.cpp  MDXGI.h  MFindWindow.cpp  MFindWindow.h  SHMEMReader.cpp  SHMEMReader.h  ScreenShooter.cpp  ScreenShooter.h  VisionThread.cpp  VisionThread.h  VisionWorker.cpp  VisionWorker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/DXGI/: CommonTypes.h  DuplicationManager.cpp  DuplicationManager.h  OutputManager.cpp  OutputManager.h  PixelShader.h  ThreadManager.cpp  ThreadManager.h  VertexShader.h
